Fix ModelToSMTZ3